--- a/src/demo/12.html
+++ b/src/demo/12.html
@@ -18,7 +18,7 @@
   <div class="demo-layout__desc">
     <div class="demo-layout__readme">
 
-      <h1>Boxe size</h1>
+      <h1>Box size in percent</h1>
       <p>Define the <code>.bfg__box</code> element size using <code>.bfg__box--1</code>, <code>.bfg__box--2</code>, ..., <code>.bfg__box--11</code>, <code>.bfg__box--12</code> modifiers.</p>
       <p>In this demo we also add <code>.bfg__box--theme-light</code> modifier to fill the <code>.bfg__content</code> element.</p>
 
