--- a/src/demo/13.html
+++ b/src/demo/13.html
@@ -20,7 +20,7 @@
 
       <h1>Mixing chained and nested grids</h1>
       <p>Works too!</p>
-      <p>Notice that if you use <code>.bfg--gap</code> modifier, you need to add <code>.bfg__box--nopad</code> modifier on the parent <code>.bfg__box</code> element of the nested grid.</p>
+      <p>Notice that if you use <code>.bfg--gap</code> modifier, you'll need to add <code>.bfg__box--nopad</code> modifier on the parent <code>.bfg__box</code> element of the nested grid.</p>
 
     </div>
   </div>
