--- a/src/demo/14.html
+++ b/src/demo/14.html
@@ -19,10 +19,8 @@
     <div class="demo-layout__readme">
 
       <h1>Content, header and actions</h1>
-      <p>
-        Use <code>.bfg__header</code> with <code>.bfg__content</code> to add an header.<br>
-        Use <code>.bfg__action</code> with <code>.bfg__header</code> to add one or more actions.
-      </p>
+      <p>Add an header using <code>.bfg__header</code> element along with <code>.bfg__content</code> element.</p>
+      <p>Add one or more actions using <code>.bfg__action</code> element along with <code>.bfg__header</code> element.</p>
 
     </div>
   </div>
