--- a/src/demo/15.html
+++ b/src/demo/15.html
@@ -19,9 +19,7 @@
     <div class="demo-layout__readme">
 
       <h1>Dashboard</h1>
-      <p>
-        Bem flex grid was designed with what we called "Dashboard" in mind.
-      </p>
+      <p>Bem flex grid perfectly fits the window size in both width and height and lets you design interfaces such as a car dashboard or a bloomberg page, as well as a scrollable page of widgets.</p>
 
     </div>
   </div>
