--- a/src/demo/3.html
+++ b/src/demo/3.html
@@ -19,10 +19,10 @@
     <div class="demo-layout__readme">
 
       <h1>Multiple lines</h1>
-      <p>To allow <code>.bfg__box</code> elements to wrap as needed onto multiple lines, use the optional <code>.bfg--wrap</code> modifier.</p>
+      <p>Allow <code>.bfg__box</code> elements to wrap as needed onto multiple lines, using the optional <code>.bfg--wrap</code> modifier.</p>
       <p class="demo-layout__warn">
         <strong>Note for Chrome:</strong><br>
-        When using <code>.bfg--col</code> modifier, you have to explicitly set the <code>width</code> of the <code>.bfg__box</code> elements, otherwise content width may increase indefinitely in width.
+        When using <code>.bfg--col</code> modifier, you have to explicitly set the <code>width</code> of the <code>.bfg__box</code> elements, otherwise content may increase indefinitely in width.
       </p>
 
     </div>
