--- a/src/demo/6.html
+++ b/src/demo/6.html
@@ -18,8 +18,8 @@
   <div class="demo-layout__desc">
     <div class="demo-layout__readme">
 
-      <h1>Nested grids</h1>
-      <p>You can nest a new <code>.bfg</code> block inside a <code>.bfg__box</code> element.</p>
+      <h1>Nested grid</h1>
+      <p>To nest grids, include a <code>.bfg</code> block inside a <code>.bfg__box</code> element.</p>
 
     </div>
   </div>
