--- a/src/demo/11.html
+++ b/src/demo/11.html
@@ -18,7 +18,7 @@
   <div class="demo-layout__desc">
     <div class="demo-layout__readme">
 
-      <h1>Fixed box size in pixels</h1>
+      <h1>Box height in pixels</h1>
       <p>To fix the height of a particular box in pixels, use <code>.bfg__box--fit</code> modifier and give the box the expected <code>height</code>.</p>
       <p>To see it in action, resize the window.</p>
 
