--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,7 @@
 
 <h1>bem-flex-grid</h1>
 <p>CSS flex grid, <a href="http://getbem.com/">BEM</a> compliant.</p>
-<p><em>A responsive grid that perfectly fits the window size in both width and height and lets you design interfaces such as a car dashboard or a bloomberg page, as well as a scrollable page of widgets.</em></p>
+<p><em>A responsive grid system that perfectly fits the window size in both width and height and lets you design interfaces such as a car dashboard or a bloomberg page, as well as a scrollable page of widgets.</em></p>
 <h2>Grid block and elements</h2>
 <p>At core the grid system consists of one block <code>.bfg</code> and several elements <code>.bfg__box</code>.</p>
 <pre><code class="language-html">&lt;div class=&quot;bfg&quot;&gt;
@@ -114,7 +114,7 @@
 <p>When using <code>.bfg--col</code> modifier, the grid needs the <code>.bfg</code> block height (or its parent height) to be defined.</p>
 </blockquote>
 <h3>.bfg--wrap</h3>
-<p>To allow <code>.bfg__box</code> elements to wrap as needed onto multiple lines, use the optional <code>.bfg--wrap</code> modifier.</p>
+<p>Allow <code>.bfg__box</code> elements to wrap as needed onto multiple lines, using the optional <code>.bfg--wrap</code> modifier.</p>
 <pre><code class="language-html">&lt;div class=&quot;bfg bfg--wrap&quot;&gt;...&lt;/div&gt;
 </code></pre>
 <h3>.bfg--[B]lines-[N]</h3>
@@ -155,7 +155,7 @@
 &lt;/div&gt;
 </code></pre>
 <h3>.bfg--gap, .bfg--gap-in</h3>
-<p>To add a gap between <code>.bfg__box</code> elements, use <code>.bfg--gap</code> modifier.</p>
+<p>Add a gap between <code>.bfg__box</code> elements, using <code>.bfg--gap</code> modifier.</p>
 <pre><code class="language-html">&lt;div class=&quot;bfg bfg--gap&quot;&gt;...&lt;/div&gt;
 </code></pre>
 <p>In this case, the grid is self contained and you don't need to add margin (or padding) to the parent node of the <code>.bfg</code> block.</p>
@@ -218,7 +218,7 @@ Then you can choose the distribution mode of the remaining space.</p>
 </code></pre>
 <h3>.bfg--[B]reverse</h3>
 <p><strong>[B]</strong> Breakpoint: <code>xl-</code>, <code>lg-</code>, <code>sm-</code>, <code>xs-</code> or none.</p>
-<p>Use <code>.bfg--reverse</code> modifier to reverse the boxes order.</p>
+<p>Reverse the boxes order using <code>.bfg--reverse</code> modifier.</p>
 <pre><code class="language-html">&lt;div class=&quot;bfg bfg--reverse&quot;&gt;...&lt;/div&gt;
 </code></pre>
 <p>As the grid is responsive, you can reverse the <code>.bfg__box</code> elements order at each breakpoint.</p>
@@ -289,7 +289,7 @@ Then you can choose the distribution mode of the remaining space.</p>
 </code></pre>
 <h3>.bfg__box--[B]first, .bfg__box--[B]last</h3>
 <p><strong>[B]</strong> Breakpoint: <code>xl-</code>, <code>lg-</code>, <code>sm-</code>, <code>xs-</code> or none.</p>
-<p>Use <code>.bfg__box--first</code> or <code>.bfg__box--last</code> modifiers to change the box order.</p>
+<p>Change the box order using <code>.bfg__box--first</code> or <code>.bfg__box--last</code> modifiers.</p>
 <pre><code class="language-html">...
   &lt;div class=&quot;bfg__box bfg__box--6 bfg__box--last&quot;&gt;&lt;/div&gt;
   &lt;div class=&quot;bfg__box bfg__box--6 bfg__box--first&quot;&gt;&lt;/div&gt;
@@ -337,7 +337,7 @@ Use <code>.bfg__box--overflow</code> modifier to apply the rule <code>overflow: 
 </code></pre>
 <h3>.bfg__box--theme-[N]</h3>
 <p><strong>[N]</strong> Name: <code>light</code> or any string.</p>
-<p>Use <code>.bfg__box--theme-light</code> to add look and feel to the box content, header and actions.</p>
+<p>Add &quot;light&quot; look and feel to the box's content, header and actions using <code>.bfg__box--theme-light</code> modifier.</p>
 <pre><code class="language-html">...
   &lt;div class=&quot;bfg__box bfg__box--theme-light&quot;&gt;
     &lt;div class=&quot;bfg__action&quot;&gt;&lt;/div&gt;
@@ -351,7 +351,7 @@ Use <code>.bfg__box--overflow</code> modifier to apply the rule <code>overflow: 
 </blockquote>
 <h2>.bfg__content modifier</h2>
 <h3>.bfg__content--nopad</h3>
-<p>Use <code>.bfg__content--nopad</code> modifier to remove the box content padding.</p>
+<p>Remove the box content padding using <code>.bfg__content--nopad</code> modifier.</p>
 <pre><code class="language-html">...
   &lt;div class=&quot;bfg__content bfg__content--nopad&quot;&gt;&lt;/div&gt;
 ...
@@ -369,8 +369,8 @@ Use <code>.bfg__content--overflow</code> modifier to apply the rule <code>overfl
 <p><strong>Example:</strong></p>
 <p>See below the <code>&lt;div&gt;</code> that has both roles:</p>
 <ul>
-<li><code>.bfg__box.bfg__box--6</code> as it is an <em>element</em> of the parent <code>.bfg.bfg--col</code> <em>block</em>.</li>
-<li><code>.bfg.bfg--row</code> as it is a <em>block</em> of the children <code>.bfg__box</code> <em>elements</em>.</li>
+<li><code>.bfg__box.bfg__box--6</code> as it is an <em>element</em> of its parent <code>.bfg.bfg--col</code> <em>block</em>.</li>
+<li><code>.bfg.bfg--row</code> as it is a <em>block</em> of its children <code>.bfg__box</code> <em>elements</em>.</li>
 </ul>
 <pre><code class="language-html">&lt;div class=&quot;bfg bfg--col bfg--gap&quot;&gt;
   &lt;div class=&quot;bfg__box bfg__box--3&quot;&gt;&lt;/div&gt;
@@ -388,12 +388,15 @@ Use <code>.bfg__content--overflow</code> modifier to apply the rule <code>overfl
 &lt;/div&gt;
 </code></pre>
 <h3>Nested grid</h3>
-<p>Another alternative consists to nest a new <code>.bfg</code> <em>block</em> inside a <code>.bfg__box</code> <em>element</em>.</p>
+<p>An alternative to chained grids consists to simply nest a new <code>.bfg</code> <em>block</em> inside a <code>.bfg__box</code> <em>element</em>.</p>
 <blockquote>
-<p>If you use <code>.bfg--gap</code> modifier, you need to add <code>.bfg__box--nopad</code> modifier on the parent <code>.bfg__box</code> of the nested grid.</p>
+<p>With this markup, if you use <code>.bfg--gap</code> modifier, you'll need to add <code>.bfg__box--nopad</code> modifier on the parent <code>.bfg__box</code> of the nested grid.</p>
 </blockquote>
 <pre><code class="language-html">&lt;div class=&quot;bfg bfg--col bfg--gap&quot;&gt;
   &lt;div class=&quot;bfg__box bfg__box--3&quot;&gt;&lt;/div&gt;
+
+  &lt;!-- `.bfg__box--nopad` modifier added to the parent of the
+    nested grid, because of the `.bfg--gap` modifier above --&gt;
   &lt;div class=&quot;bfg__box bfg__box--6 bfg__box--nopad&quot;&gt;
 
     &lt;!-- Nested grid starts here, inside the `.bfg__box` element --&gt;
@@ -404,12 +407,22 @@ Use <code>.bfg__content--overflow</code> modifier to apply the rule <code>overfl
     &lt;/div&gt;
 
   &lt;/div&gt;
+
   &lt;div class=&quot;bfg__box bfg__box--3&quot;&gt;&lt;/div&gt;
 &lt;/div&gt;
 </code></pre>
 <h2>Sass customization</h2>
 <h3>Default variables</h3>
-<pre><code class="language-scss">$bfg-gap: 1rem !default;
+<pre><code class="language-scss">$ie11-support: false !default;
+
+$bfg-breakpoints: (
+  xs: 576px,
+  sm: 768px,
+  lg: 992px,
+  xl: 1200px
+) !default;
+
+$bfg-gap: 1rem !default;
 
 $bfg-padding: 0.5rem !default;
 
@@ -430,27 +443,20 @@ $bfg-theme-light: (
 ) !default;
 
 $bfg-theme-light-included: true;
-
-$bfg-breakpoints: (
-  xs: 576px,
-  sm: 768px,
-  lg: 992px,
-  xl: 1200px
-) !default;
 </code></pre>
 <p><strong>Example:</strong></p>
-<p>To change the boxes gap, create a new file <code>my-custo-bfg.scss</code> with the following content:</p>
+<p>To change the boxes gap, create a file <code>custo-bfg.scss</code> with the following content:</p>
 <pre><code class="language-scss">// Overwrite gap
 $bfg-gap: 2rem;
 
 @import &quot;[PATH_TO]/node_modules/bem-flex-grid/src/lib/bem-flex-grid.scss&quot;;
 </code></pre>
 <h3>Mixin</h3>
-<p>The <code>bfg-theme</code> mixin allows you to customize the content look and feel.</p>
+<p>The <code>bfg-theme</code> mixin allows you to customize the look and feel of the box's content, header and actions.</p>
 <pre><code class="language-scss">@mixin bfg-theme($name, $settings) { ... }
 </code></pre>
 <p><strong>Example:</strong></p>
-<p>To add a new theme with name <code>info</code>, create a new file <code>my-custo-bfg.scss</code> with the following content:</p>
+<p>To add a theme named <code>info</code>, create a file <code>custo-bfg.scss</code> with the following content:</p>
 <pre><code class="language-scss">@import &quot;[PATH_TO]/node_modules/bem-flex-grid/src/lib/bem-flex-grid.scss&quot;;
 
 // Add new theme
@@ -467,9 +473,9 @@ $bfg-gap: 2rem;
 ));
 </code></pre>
 <blockquote>
-<p>Notice that omitted map keys (<code>box-shadow</code> and <code>content-forground</code> in this example) fall back to their default value.</p>
+<p>Notice that omitted map keys (<code>box-shadow</code> and <code>content-forground</code> in this example) fall back to their default value (picked from the &quot;light&quot; theme).</p>
 </blockquote>
-<p>Now, you can use the new theme named <code>info</code>:</p>
+<p>Now, you can use your new theme named <code>info</code>:</p>
 <pre><code class="language-html">...
   &lt;div class=&quot;bfg__box bfg__box--theme-info&quot;&gt;
     &lt;div class=&quot;bfg__action&quot;&gt;&lt;/div&gt;
