Improve demo toolbox action

--- a/src/demo.html
+++ b/src/demo.html
@@ -48,7 +48,7 @@
   </header>
 
   <main class="www-container">
-    <div class="www-showcase">
+    <nav class="www-showcase">
       <a href="demo/1.html"></a>
       <a href="demo/2.html"></a>
       <a href="demo/3.html"></a>
@@ -64,7 +64,7 @@
       <a href="demo/13.html"></a>
       <a href="demo/14.html"></a>
       <a href="demo/15.html"></a>
-    </div>
+    </nav>
   </main>
 
   <footer class="www-footer">
