--- a/src/index.html
+++ b/src/index.html
@@ -62,9 +62,9 @@
 
 <h1>bem-flex-grid</h1>
 <p>CSS flex grid, <a href="http://getbem.com/">BEM</a> compliant.</p>
-<p><em>A responsive grid system that perfectly fits the window size in both width and height and lets you design interfaces such as a car dashboard or a bloomberg page, as well as a scrollable page of widgets.</em></p>
+<p><em>A responsive grid system that perfectly fits the window size in both width and height if needed and lets you design interfaces such as a car dashboard or a bloomberg page, as well as a scrollable page of widgets.</em></p>
 <h2>Grid block and elements</h2>
-<p>At core the grid system consists of one block <code>.bfg</code> and several elements <code>.bfg__box</code>.</p>
+<p>At core the grid system consists of one <code>.bfg</code> block and one or more <code>.bfg__box</code> elements.</p>
 <pre><code class="language-html">&lt;div class=&quot;bfg&quot;&gt;
   &lt;div class=&quot;bfg__box&quot;&gt;&lt;/div&gt;
   &lt;div class=&quot;bfg__box&quot;&gt;&lt;/div&gt;
