--- a/src/demo/1.html
+++ b/src/demo/1.html
@@ -19,7 +19,7 @@
     <div class="demo-layout__readme">
 
       <h1>Basics</h1>
-      <p>At core the grid system consists of one block <code>.bfg</code> and one element <code>.bfg__box</code>.</p>
+      <p>At core the grid system consists of one <code>.bfg</code> block and one or more <code>.bfg__box</code> elements.</p>
       <p>It is required to define the direction the <code>.bfg__box</code> elements are placed in the <code>.bfg</code> block, using <code>.bfg--row</code> or <code>.bfg--col</code> modifiers.</p>
 
     </div>
