Rename "light" theme into "primary"

--- a/src/demo/14.html
+++ b/src/demo/14.html
@@ -35,7 +35,7 @@
         </div>
 
         <div class="bfg__box bfg__box--6 bfg bfg--row">
-          <div class="bfg__box bfg__box--3 bfg__box--theme-light">
+          <div class="bfg__box bfg__box--3 bfg__box--theme-primary">
             <!-- content with header and actions -->
             <div class="bfg__action"><a href="#action-2">Action 2</a></div>
             <div class="bfg__action"><a href="#action-1">Action 1</a></div>
@@ -43,7 +43,7 @@
             <div class="bfg__content"></div>
           </div>
 
-          <div class="bfg__box bfg__box--6 bfg__box--theme-light">
+          <div class="bfg__box bfg__box--6 bfg__box--theme-primary">
             <!-- content without header -->
             <div class="bfg__content"></div>
           </div>
