Remove "theme" prefix

--- a/src/demo/14.html
+++ b/src/demo/14.html
@@ -28,14 +28,14 @@
     <div class="demo-layout__playground">
 
       <div class="bfg bfg--col bfg--gap">
-        <div class="bfg__box bfg__box--3 bfg__box--theme-error">
+        <div class="bfg__box bfg__box--3 bfg__box--error">
           <!-- content with header -->
           <header class="bfg__header">Header</header>
           <div class="bfg__content"></div>
         </div>
 
         <div class="bfg__box bfg__box--6 bfg bfg--row">
-          <div class="bfg__box bfg__box--3 bfg__box--theme-primary">
+          <div class="bfg__box bfg__box--3 bfg__box--primary">
             <!-- content with header and actions -->
             <div class="bfg__action"><a href="#action-2">Action 2</a></div>
             <div class="bfg__action"><a href="#action-1">Action 1</a></div>
@@ -43,18 +43,18 @@
             <div class="bfg__content"></div>
           </div>
 
-          <div class="bfg__box bfg__box--6 bfg__box--theme-primary">
+          <div class="bfg__box bfg__box--6 bfg__box--primary">
             <!-- content without header -->
             <div class="bfg__content"></div>
           </div>
 
-          <div class="bfg__box bfg__box--3 bfg__box--theme-info">
+          <div class="bfg__box bfg__box--3 bfg__box--info">
             <header class="bfg__header">Header</header>
             <div class="bfg__content"></div>
           </div>
         </div>
 
-        <div class="bfg__box bfg__box--3 bfg__box--theme-warning">
+        <div class="bfg__box bfg__box--3 bfg__box--warning">
           <header class="bfg__header">Header</header>
           <div class="bfg__content"></div>
         </div>
