--- a/src/index.html
+++ b/src/index.html
@@ -343,11 +343,11 @@ Then you can choose the distribution mode of the remaining space.</p>
   &lt;div class=&quot;bfg__box bfg__box--4&quot;&gt;&lt;/div&gt;
 &lt;/div&gt;
 </code></pre>
-<h3>.bfg__box--theme-[N]</h3>
-<p><strong>[N]</strong> Name: <code>primary</code> or any string.</p>
-<p>Add &quot;primary&quot; look and feel to the box's content, header and actions using <code>.bfg__box--theme-primary</code> modifier.</p>
+<h3>.bfg__box--[T]</h3>
+<p><strong>[T]</strong> Theme: <code>primary</code> or any string.</p>
+<p>Add &quot;primary&quot; look and feel to the box's content, header and actions using <code>.bfg__box--primary</code> modifier.</p>
 <pre><code class="language-html">...
-  &lt;div class=&quot;bfg__box bfg__box--theme-primary&quot;&gt;
+  &lt;div class=&quot;bfg__box bfg__box--primary&quot;&gt;
     &lt;div class=&quot;bfg__action&quot;&gt;&lt;/div&gt;
     &lt;div class=&quot;bfg__header&quot;&gt;&lt;/div&gt;
     &lt;div class=&quot;bfg__content&quot;&gt;&lt;/div&gt;
@@ -488,7 +488,7 @@ $bfg-gap: 2rem;
 </blockquote>
 <p>Now, you can use your new theme named <code>info</code>:</p>
 <pre><code class="language-html">...
-  &lt;div class=&quot;bfg__box bfg__box--theme-info&quot;&gt;
+  &lt;div class=&quot;bfg__box bfg__box--info&quot;&gt;
     &lt;div class=&quot;bfg__action&quot;&gt;&lt;/div&gt;
     &lt;div class=&quot;bfg__header&quot;&gt;&lt;/div&gt;
     &lt;div class=&quot;bfg__content&quot;&gt;&lt;/div&gt;
@@ -615,7 +615,7 @@ $bfg-gap: 2rem;
 <td><code>.bfg__box--overflow-hidden</code></td>
 </tr>
 <tr>
-<td><code>.bfg__box--theme-primary</code></td>
+<td><code>.bfg__box--primary</code></td>
 </tr>
 </tbody>
 </table>
