--- a/src/demo/12.html
+++ b/src/demo/12.html
@@ -20,7 +20,7 @@
 
       <h1>Box size in percent</h1>
       <p>Define the <code>.bfg__box</code> element size using <code>.bfg__box--1</code>, <code>.bfg__box--2</code>, ..., <code>.bfg__box--11</code>, <code>.bfg__box--12</code> modifiers.</p>
-      <p>In this demo we also add <code>.bfg__box--theme-primary</code> modifier to fill the <code>.bfg__content</code> element.</p>
+      <p>In this demo we also add <code>.bfg__box--primary</code> modifier to fill the <code>.bfg__content</code> element.</p>
 
     </div>
   </div>
@@ -28,25 +28,25 @@
     <div class="demo-layout__playground">
 
       <div class="bfg bfg--row bfg--gap bfg--wrap">
-        <div class="bfg__box bfg__box--12 bfg__box--theme-primary"><div class="bfg__content"></div></div>
+        <div class="bfg__box bfg__box--12 bfg__box--primary"><div class="bfg__content"></div></div>
 
-        <div class="bfg__box bfg__box--11 bfg__box--theme-primary"><div class="bfg__content"></div></div>
-        <div class="bfg__box bfg__box--1 bfg__box--theme-primary"><div class="bfg__content"></div></div>
+        <div class="bfg__box bfg__box--11 bfg__box--primary"><div class="bfg__content"></div></div>
+        <div class="bfg__box bfg__box--1 bfg__box--primary"><div class="bfg__content"></div></div>
 
-        <div class="bfg__box bfg__box--10 bfg__box--theme-primary"><div class="bfg__content"></div></div>
-        <div class="bfg__box bfg__box--2 bfg__box--theme-primary"><div class="bfg__content"></div></div>
+        <div class="bfg__box bfg__box--10 bfg__box--primary"><div class="bfg__content"></div></div>
+        <div class="bfg__box bfg__box--2 bfg__box--primary"><div class="bfg__content"></div></div>
 
-        <div class="bfg__box bfg__box--9 bfg__box--theme-primary"><div class="bfg__content"></div></div>
-        <div class="bfg__box bfg__box--3 bfg__box--theme-primary"><div class="bfg__content"></div></div>
+        <div class="bfg__box bfg__box--9 bfg__box--primary"><div class="bfg__content"></div></div>
+        <div class="bfg__box bfg__box--3 bfg__box--primary"><div class="bfg__content"></div></div>
 
-        <div class="bfg__box bfg__box--8 bfg__box--theme-primary"><div class="bfg__content"></div></div>
-        <div class="bfg__box bfg__box--4 bfg__box--theme-primary"><div class="bfg__content"></div></div>
+        <div class="bfg__box bfg__box--8 bfg__box--primary"><div class="bfg__content"></div></div>
+        <div class="bfg__box bfg__box--4 bfg__box--primary"><div class="bfg__content"></div></div>
 
-        <div class="bfg__box bfg__box--7 bfg__box--theme-primary"><div class="bfg__content"></div></div>
-        <div class="bfg__box bfg__box--5 bfg__box--theme-primary"><div class="bfg__content"></div></div>
+        <div class="bfg__box bfg__box--7 bfg__box--primary"><div class="bfg__content"></div></div>
+        <div class="bfg__box bfg__box--5 bfg__box--primary"><div class="bfg__content"></div></div>
 
-        <div class="bfg__box bfg__box--6 bfg__box--theme-primary"><div class="bfg__content"></div></div>
-        <div class="bfg__box bfg__box--6 bfg__box--theme-primary"><div class="bfg__content"></div></div>
+        <div class="bfg__box bfg__box--6 bfg__box--primary"><div class="bfg__content"></div></div>
+        <div class="bfg__box bfg__box--6 bfg__box--primary"><div class="bfg__content"></div></div>
       </div>
 
     </div>
