--- a/src/demo/15.html
+++ b/src/demo/15.html
@@ -27,7 +27,7 @@
     <div class="demo-layout__playground">
 
       <div class="bfg bfg--col bfg--gap">
-        <div class="bfg__box bfg__box--6 bfg__box--theme-primary">
+        <div class="bfg__box bfg__box--6 bfg__box--primary">
           <!-- content with header -->
           <header class="bfg__header">Header</header>
           <div class="bfg__content">
@@ -36,7 +36,7 @@
         </div>
 
         <div class="bfg__box bfg__box--6 bfg bfg--row">
-          <div class="bfg__box bfg__box--3 bfg__box--theme-primary">
+          <div class="bfg__box bfg__box--3 bfg__box--primary">
             <!-- content with header and actions -->
             <div class="bfg__action"><a href="#action-2">Action 2</a></div>
             <div class="bfg__action"><a href="#action-1">Action 1</a></div>
@@ -46,13 +46,13 @@
             </div>
           </div>
 
-          <div class="bfg__box bfg__box--6 bfg__box--theme-primary">
+          <div class="bfg__box bfg__box--6 bfg__box--primary">
             <div class="bfg__content">
               <div class="demo-chart"></div>
             </div>
           </div>
 
-          <div class="bfg__box bfg__box--3 bfg__box--theme-primary">
+          <div class="bfg__box bfg__box--3 bfg__box--primary">
             <header class="bfg__header">Header</header>
             <div class="bfg__content">
               <div class="demo-chart"></div>
