--- a/src/demo/10.html
+++ b/src/demo/10.html
@@ -18,9 +18,10 @@
   <div class="demo-layout__desc">
     <div class="demo-layout__readme">
 
-      <h1>Box width in pixels</h1>
-      <p>To fix the width of a particular box in pixels, use <code>.bfg__box--fit</code> modifier and give the box the expected <code>width</code>.</p>
+      <h1>Box fit</h1>
+      <p>Use <code>.bfg__box--fit</code> modifier to indicate that a <code>.bfg__box</code> element should not grow or shrink.</p>
       <p>To see it in action, resize the window.</p>
+      <p>Additionally, you can fix the size in pixels by giving the box the expected <code>width</code> for grid in row direction and <code>height</code> for grid in column direction.</p>
 
     </div>
   </div>
@@ -28,8 +29,8 @@
     <div class="demo-layout__playground">
 
       <div class="bfg bfg--row">
-        <div class="bfg__box bfg__box--fit" style="width:100px">
-          <i>100px width</i>
+        <div class="bfg__box bfg__box--fit">
+          <i>Box fit!</i>
         </div>
         <div class="bfg__box bfg__box--4"></div>
         <div class="bfg__box bfg__box--8"></div>
@@ -38,6 +39,6 @@
     </div>
   </pre>
 
-  <script>Demo.viewCode(); Demo.fillGrid(); Demo.enableActions(['fullWidth', 'autoHeight']);</script>
+  <script>Demo.viewCode(); Demo.fillGrid(); Demo.enableActions();</script>
 </body>
 </html>
