--- a/src/demo/11.html
+++ b/src/demo/11.html
@@ -18,26 +18,40 @@
   <div class="demo-layout__desc">
     <div class="demo-layout__readme">
 
-      <h1>Box height in pixels</h1>
-      <p>To fix the height of a particular box in pixels, use <code>.bfg__box--fit</code> modifier and give the box the expected <code>height</code>.</p>
-      <p>To see it in action, resize the window.</p>
+      <h1>Box size in percent</h1>
+      <p>Define the <code>.bfg__box</code> element size using <code>.bfg__box--1</code>, <code>.bfg__box--2</code>, ..., <code>.bfg__box--11</code>, <code>.bfg__box--12</code> modifiers.</p>
+      <p>In this demo we also add <code>.bfg__box--primary</code> modifier to fill the <code>.bfg__content</code> element.</p>
 
     </div>
   </div>
-  <pre class="demo-layout__output">
+  <pre class="demo-layout__output demo-layout__output--gray">
     <div class="demo-layout__playground">
 
-      <div class="bfg bfg--col">
-        <div class="bfg__box bfg__box--fit" style="height:100px">
-            <i>100px height</i>
-        </div>
-        <div class="bfg__box bfg__box--4"></div>
-        <div class="bfg__box bfg__box--8"></div>
+      <div class="bfg bfg--row bfg--gap bfg--wrap">
+        <div class="bfg__box bfg__box--12 bfg__box--primary"><div class="bfg__content"></div></div>
+
+        <div class="bfg__box bfg__box--11 bfg__box--primary"><div class="bfg__content"></div></div>
+        <div class="bfg__box bfg__box--1 bfg__box--primary"><div class="bfg__content"></div></div>
+
+        <div class="bfg__box bfg__box--10 bfg__box--primary"><div class="bfg__content"></div></div>
+        <div class="bfg__box bfg__box--2 bfg__box--primary"><div class="bfg__content"></div></div>
+
+        <div class="bfg__box bfg__box--9 bfg__box--primary"><div class="bfg__content"></div></div>
+        <div class="bfg__box bfg__box--3 bfg__box--primary"><div class="bfg__content"></div></div>
+
+        <div class="bfg__box bfg__box--8 bfg__box--primary"><div class="bfg__content"></div></div>
+        <div class="bfg__box bfg__box--4 bfg__box--primary"><div class="bfg__content"></div></div>
+
+        <div class="bfg__box bfg__box--7 bfg__box--primary"><div class="bfg__content"></div></div>
+        <div class="bfg__box bfg__box--5 bfg__box--primary"><div class="bfg__content"></div></div>
+
+        <div class="bfg__box bfg__box--6 bfg__box--primary"><div class="bfg__content"></div></div>
+        <div class="bfg__box bfg__box--6 bfg__box--primary"><div class="bfg__content"></div></div>
       </div>
 
     </div>
   </pre>
 
-  <script>Demo.viewCode(); Demo.fillGrid(); Demo.enableActions(['fullWidth', 'autoHeight']);</script>
+  <script>Demo.viewCode(); Demo.enableActions();</script>
 </body>
 </html>
