--- a/src/demo/12.html
+++ b/src/demo/12.html
@@ -18,40 +18,72 @@
   <div class="demo-layout__desc">
     <div class="demo-layout__readme">
 
-      <h1>Box size in percent</h1>
-      <p>Define the <code>.bfg__box</code> element size using <code>.bfg__box--1</code>, <code>.bfg__box--2</code>, ..., <code>.bfg__box--11</code>, <code>.bfg__box--12</code> modifiers.</p>
-      <p>In this demo we also add <code>.bfg__box--primary</code> modifier to fill the <code>.bfg__content</code> element.</p>
+      <h1>Mixing chained and nested grids</h1>
+      <p>Works too!</p>
+      <p>Notice that if you use <code>.bfg--gap</code> modifier, you'll need to add <code>.bfg__box--nopad</code> modifier on the parent <code>.bfg__box</code> element of the nested grid.</p>
+      <p>In this demo we also add <code>.bfg__content--nopad</code> modifier to remove the padding of the <code>.bfg__content</code> element.</p>
 
     </div>
   </div>
-  <pre class="demo-layout__output demo-layout__output--gray">
+  <pre class="demo-layout__output">
     <div class="demo-layout__playground">
 
-      <div class="bfg bfg--row bfg--gap bfg--wrap">
-        <div class="bfg__box bfg__box--12 bfg__box--primary"><div class="bfg__content"></div></div>
+      <div class="bfg bfg--col bfg--gap">
+        <div class="bfg__box bfg__box--6 bfg bfg--row"><!-- chained -->
 
-        <div class="bfg__box bfg__box--11 bfg__box--primary"><div class="bfg__content"></div></div>
-        <div class="bfg__box bfg__box--1 bfg__box--primary"><div class="bfg__content"></div></div>
+          <div class="bfg__box bfg__box--6 bfg bfg--col"><!-- chained -->
 
-        <div class="bfg__box bfg__box--10 bfg__box--primary"><div class="bfg__content"></div></div>
-        <div class="bfg__box bfg__box--2 bfg__box--primary"><div class="bfg__content"></div></div>
+            <div class="bfg__box bfg__box--6">
+              <div class="bfg__content bfg__content--nopad"></div>
+            </div>
+            <div class="bfg__box bfg__box--6">
+              <div class="bfg__content bfg__content--nopad"></div>
+            </div>
 
-        <div class="bfg__box bfg__box--9 bfg__box--primary"><div class="bfg__content"></div></div>
-        <div class="bfg__box bfg__box--3 bfg__box--primary"><div class="bfg__content"></div></div>
+          </div>
+          <div class="bfg__box bfg__box--6 bfg__box--nopad"><!-- nopad -->
+            <div class="bfg bfg--col"><!-- nested -->
 
-        <div class="bfg__box bfg__box--8 bfg__box--primary"><div class="bfg__content"></div></div>
-        <div class="bfg__box bfg__box--4 bfg__box--primary"><div class="bfg__content"></div></div>
+              <div class="bfg__box bfg__box--6"><div class="bfg__content bfg__content--nopad"></div></div>
+              <div class="bfg__box bfg__box--6"><div class="bfg__content bfg__content--nopad"></div></div>
 
-        <div class="bfg__box bfg__box--7 bfg__box--primary"><div class="bfg__content"></div></div>
-        <div class="bfg__box bfg__box--5 bfg__box--primary"><div class="bfg__content"></div></div>
+            </div>
+          </div>
 
-        <div class="bfg__box bfg__box--6 bfg__box--primary"><div class="bfg__content"></div></div>
-        <div class="bfg__box bfg__box--6 bfg__box--primary"><div class="bfg__content"></div></div>
+        </div>
+        <div class="bfg__box bfg__box--6 bfg__box--nopad"><!-- nopad -->
+
+          <div class="bfg bfg--row"><!-- nested -->
+            <div class="bfg__box bfg__box--6 bfg bfg--col"><!-- chained -->
+
+              <div class="bfg__box bfg__box--6">
+                <div class="bfg__content bfg__content--nopad"></div>
+            </div>
+              <div class="bfg__box bfg__box--6">
+                <div class="bfg__content bfg__content--nopad"></div>
+            </div>
+
+            </div>
+            <div class="bfg__box bfg__box--6 bfg__box--nopad"><!-- nopad -->
+              <div class="bfg bfg--col"><!-- nested -->
+
+                <div class="bfg__box bfg__box--6">
+                  <div class="bfg__content bfg__content--nopad"></div>
+                </div>
+                <div class="bfg__box bfg__box--6">
+                  <div class="bfg__content bfg__content--nopad"></div>
+                </div>
+
+              </div>
+            </div>
+          </div>
+
+        </div>
       </div>
 
     </div>
   </pre>
 
-  <script>Demo.viewCode(); Demo.enableActions();</script>
+  <script>Demo.viewCode(); Demo.fillGrid(); Demo.enableActions();</script>
 </body>
 </html>
