--- a/src/demo/14.html
+++ b/src/demo/14.html
@@ -10,7 +10,7 @@
 
   <link rel="shortcut icon" href="../favicon.ico">
   <link rel="stylesheet" href="../styles/demo.scss">
-  <link rel="stylesheet" href="14.scss">
+  <link rel="stylesheet" href="../lib/bem-flex-grid.ie11.scss">
 
   <script src="../script.ts"></script>
 </head>
@@ -18,9 +18,8 @@
   <div class="demo-layout__desc">
     <div class="demo-layout__readme">
 
-      <h1>Content, header and actions</h1>
-      <p>Add an header using <code>.bfg__header</code> element along with <code>.bfg__content</code> element.</p>
-      <p>Add one or more actions using <code>.bfg__action</code> element along with <code>.bfg__header</code> element.</p>
+      <h1>Dashboard</h1>
+      <p>Bem flex grid perfectly fits the window size in both width and height and lets you design interfaces such as a car dashboard or a bloomberg page, as well as a scrollable page of widgets.</p>
 
     </div>
   </div>
@@ -28,10 +27,12 @@
     <div class="demo-layout__playground">
 
       <div class="bfg bfg--col bfg--gap">
-        <div class="bfg__box bfg__box--3 bfg__box--error">
+        <div class="bfg__box bfg__box--6 bfg__box--primary">
           <!-- content with header -->
           <header class="bfg__header">Header</header>
-          <div class="bfg__content"></div>
+          <div class="bfg__content">
+            <div class="demo-chart"></div>
+          </div>
         </div>
 
         <div class="bfg__box bfg__box--6 bfg bfg--row">
@@ -40,29 +41,36 @@
             <div class="bfg__action"><a href="#action-2">Action 2</a></div>
             <div class="bfg__action"><a href="#action-1">Action 1</a></div>
             <header class="bfg__header">Very very very long Header</header>
-            <div class="bfg__content"></div>
+            <div class="bfg__content">
+              <div class="demo-chart"></div>
+            </div>
           </div>
 
           <div class="bfg__box bfg__box--6 bfg__box--primary">
-            <!-- content without header -->
-            <div class="bfg__content"></div>
+            <div class="bfg__content">
+              <div class="demo-chart"></div>
+            </div>
           </div>
 
-          <div class="bfg__box bfg__box--3 bfg__box--info">
+          <div class="bfg__box bfg__box--3 bfg__box--primary">
             <header class="bfg__header">Header</header>
-            <div class="bfg__content"></div>
+            <div class="bfg__content">
+              <div class="demo-chart"></div>
+            </div>
           </div>
-        </div>
-
-        <div class="bfg__box bfg__box--3 bfg__box--warning">
-          <header class="bfg__header">Header</header>
-          <div class="bfg__content"></div>
         </div>
       </div>
 
     </div>
   </pre>
 
-  <script>Demo.viewCode(); Demo.fillGrid({ textColor: false }); Demo.enableActions();</script>
+  <script>Demo.viewCode(); Demo.enableActions(['fullWidth', 'direction']);</script>
+
+  <script>
+    const ctx = document.querySelectorAll('.demo-chart');
+    for (let i = 0; i < ctx.length; i++) {
+      Demo.chart(ctx[i]);
+    }
+  </script>
 </body>
 </html>
